cmake_minimum_required(VERSION 2.8)

PROJECT("LuaBitLibrary")

SET(LIBRARY_OUTPUT_PATH lib/)
MAKE_DIRECTORY(${LIBRARY_OUTPUT_PATH})


SET(LuaBitLibrary_VERSION 0.0.1)
SET(LuaBitLibrary_LIBRARY_DIR ${LIBRARY_OUTPUT_PATH})


FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(Lua51 REQUIRED)

INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(bit.i PROPERTIES CPLUSPLUS OFF)
SET_SOURCE_FILES_PROPERTIES(bit.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_MODULE(bit lua bit.i bit.c)
SWIG_LINK_LIBRARIES(bit ${LUA_LIBRARIES})
