cmake_minimum_required(VERSION 2.8)

PROJECT("LuaBitLibrary")

SET(LuaBitLibrary_VERSION 0.0.1)

FIND_PACKAGE(SWIG REQUIRED)


INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})

SET_SOURCE_FILES_PROPERTIES(bit.i PROPERTIES CPLUSPLUS OFF)
SET_SOURCE_FILES_PROPERTIES(bit.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_MODULE(bit lua bit.i bit.c)
SWIG_LINK_LIBRARIES(bit ${LUA_LIBRARIES})
SET_TARGET_PROPERTIES(bit PROPERTIES PREFIX "")
